created animated custom menu

--- a/app.json
+++ b/app.json
@@ -4,16 +4,15 @@
     "slug": "expo-menu",
     "version": "1.0.0",
     "orientation": "portrait",
+    "scheme": "expo-menu",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
