Added edge detection

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.6",
+    "expo-image": "~1.10.6",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.9",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-outside-press": "^1.2.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
